PRL-4307 - Append date and time with document name for reveiw documents dropdown label